--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,8 +21,8 @@ jobs:
         run: cargo llvm-cov --lcov --output-path lcov.info
 
       - name: Upload to Codecov
-        uses: codecov/codecov-action@5
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          # files: lcov.info
-          # fail_ci_if_error: true
+          files: lcov.info
+          fail_ci_if_error: true
