--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
-arrayvec = "0.7.6"
+arrayvec = { version = "0.7.6", features = ["serde"] }
+bincode = { version = "1.3.3" }
 bitvec = "1.0.1"
 rand = "0.9.2"
 rand_xorshift = "0.4.0"
+serde = { version = "1.0.228", features = ["derive"] }
 
 [profile.opt-debug]
 inherits = "release"
