--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 arrayvec = { version = "0.7.6", features = ["serde"] }
 bincode = { version = "1.3.3" }
 bitvec = "1.0.1"
+pretty_assertions = "1.4.1"
 rand = "0.9.2"
 rand_xorshift = "0.4.0"
 serde = { version = "1.0.228", features = ["derive"] }
